--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -19,6 +19,7 @@
             ],
             "settings": {
                 "python.defaultInterpreterPath": "/usr/local/bin/python3",
+                "chat.mcp.autostart": "newAndOutdated",
                 "files.associations": {
                     "requirements.txt": "pip-requirements",
                     "requirements.in": "pip-requirements"
